parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> cmds
Rule 2     cmds -> cmds cmd
Rule 3     cmds -> cmd
Rule 4     cmd -> atribuicao
Rule 5     cmd -> impressao
Rule 6     cmd -> operacao
Rule 7     cmd -> repeticao
Rule 8     cmd -> condicional
Rule 9     atribuicao -> FACA var SER numero PONTO
Rule 10    impressao -> MOSTRE var PONTO
Rule 11    impressao -> MOSTRE operacao PONTO
Rule 12    impressao -> MOSTRE numero PONTO
Rule 13    operacao -> SOME var COM var PONTO
Rule 14    operacao -> SOME var COM numero PONTO
Rule 15    operacao -> MULTIPLIQUE var POR var PONTO
Rule 16    operacao -> MULTIPLIQUE var POR numero PONTO
Rule 17    repeticao -> REPITA numero VEZES COLON cmds FIM
Rule 18    condicional -> SE var ENTAO cmds FIM
Rule 19    condicional -> SE var ENTAO cmds SENAO cmds FIM

Terminals, with rules where they appear

COLON                : 17
COM                  : 13 14
ENTAO                : 18 19
FACA                 : 9
FIM                  : 17 18 19
MOSTRE               : 10 11 12
MULTIPLIQUE          : 15 16
PONTO                : 9 10 11 12 13 14 15 16
POR                  : 15 16
REPITA               : 17
SE                   : 18 19
SENAO                : 19
SER                  : 9
SOME                 : 13 14
VEZES                : 17
error                : 
numero               : 9 12 14 16 17
var                  : 9 10 13 13 14 15 15 16 18 19

Nonterminals, with rules where they appear

atribuicao           : 4
cmd                  : 2 3
cmds                 : 1 2 17 18 19 19
condicional          : 8
impressao            : 5
operacao             : 6 11
programa             : 0
repeticao            : 7

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . cmds
    (2) cmds -> . cmds cmd
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM

    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    programa                       shift and go to state 1
    cmds                           shift and go to state 2
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    condicional                    shift and go to state 8

state 1

    (0) S' -> programa .



state 2

    (1) programa -> cmds .
    (2) cmds -> cmds . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM

    $end            reduce using rule 1 (programa -> cmds .)
    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmd                            shift and go to state 15
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    condicional                    shift and go to state 8

state 3

    (3) cmds -> cmd .

    FACA            reduce using rule 3 (cmds -> cmd .)
    MOSTRE          reduce using rule 3 (cmds -> cmd .)
    SOME            reduce using rule 3 (cmds -> cmd .)
    MULTIPLIQUE     reduce using rule 3 (cmds -> cmd .)
    REPITA          reduce using rule 3 (cmds -> cmd .)
    SE              reduce using rule 3 (cmds -> cmd .)
    $end            reduce using rule 3 (cmds -> cmd .)
    FIM             reduce using rule 3 (cmds -> cmd .)
    SENAO           reduce using rule 3 (cmds -> cmd .)


state 4

    (4) cmd -> atribuicao .

    FACA            reduce using rule 4 (cmd -> atribuicao .)
    MOSTRE          reduce using rule 4 (cmd -> atribuicao .)
    SOME            reduce using rule 4 (cmd -> atribuicao .)
    MULTIPLIQUE     reduce using rule 4 (cmd -> atribuicao .)
    REPITA          reduce using rule 4 (cmd -> atribuicao .)
    SE              reduce using rule 4 (cmd -> atribuicao .)
    $end            reduce using rule 4 (cmd -> atribuicao .)
    FIM             reduce using rule 4 (cmd -> atribuicao .)
    SENAO           reduce using rule 4 (cmd -> atribuicao .)


state 5

    (5) cmd -> impressao .

    FACA            reduce using rule 5 (cmd -> impressao .)
    MOSTRE          reduce using rule 5 (cmd -> impressao .)
    SOME            reduce using rule 5 (cmd -> impressao .)
    MULTIPLIQUE     reduce using rule 5 (cmd -> impressao .)
    REPITA          reduce using rule 5 (cmd -> impressao .)
    SE              reduce using rule 5 (cmd -> impressao .)
    $end            reduce using rule 5 (cmd -> impressao .)
    FIM             reduce using rule 5 (cmd -> impressao .)
    SENAO           reduce using rule 5 (cmd -> impressao .)


state 6

    (6) cmd -> operacao .

    FACA            reduce using rule 6 (cmd -> operacao .)
    MOSTRE          reduce using rule 6 (cmd -> operacao .)
    SOME            reduce using rule 6 (cmd -> operacao .)
    MULTIPLIQUE     reduce using rule 6 (cmd -> operacao .)
    REPITA          reduce using rule 6 (cmd -> operacao .)
    SE              reduce using rule 6 (cmd -> operacao .)
    $end            reduce using rule 6 (cmd -> operacao .)
    FIM             reduce using rule 6 (cmd -> operacao .)
    SENAO           reduce using rule 6 (cmd -> operacao .)


state 7

    (7) cmd -> repeticao .

    FACA            reduce using rule 7 (cmd -> repeticao .)
    MOSTRE          reduce using rule 7 (cmd -> repeticao .)
    SOME            reduce using rule 7 (cmd -> repeticao .)
    MULTIPLIQUE     reduce using rule 7 (cmd -> repeticao .)
    REPITA          reduce using rule 7 (cmd -> repeticao .)
    SE              reduce using rule 7 (cmd -> repeticao .)
    $end            reduce using rule 7 (cmd -> repeticao .)
    FIM             reduce using rule 7 (cmd -> repeticao .)
    SENAO           reduce using rule 7 (cmd -> repeticao .)


state 8

    (8) cmd -> condicional .

    FACA            reduce using rule 8 (cmd -> condicional .)
    MOSTRE          reduce using rule 8 (cmd -> condicional .)
    SOME            reduce using rule 8 (cmd -> condicional .)
    MULTIPLIQUE     reduce using rule 8 (cmd -> condicional .)
    REPITA          reduce using rule 8 (cmd -> condicional .)
    SE              reduce using rule 8 (cmd -> condicional .)
    $end            reduce using rule 8 (cmd -> condicional .)
    FIM             reduce using rule 8 (cmd -> condicional .)
    SENAO           reduce using rule 8 (cmd -> condicional .)


state 9

    (9) atribuicao -> FACA . var SER numero PONTO

    var             shift and go to state 16


state 10

    (10) impressao -> MOSTRE . var PONTO
    (11) impressao -> MOSTRE . operacao PONTO
    (12) impressao -> MOSTRE . numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO

    var             shift and go to state 17
    numero          shift and go to state 19
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12

    operacao                       shift and go to state 18

state 11

    (13) operacao -> SOME . var COM var PONTO
    (14) operacao -> SOME . var COM numero PONTO

    var             shift and go to state 20


state 12

    (15) operacao -> MULTIPLIQUE . var POR var PONTO
    (16) operacao -> MULTIPLIQUE . var POR numero PONTO

    var             shift and go to state 21


state 13

    (17) repeticao -> REPITA . numero VEZES COLON cmds FIM

    numero          shift and go to state 22


state 14

    (18) condicional -> SE . var ENTAO cmds FIM
    (19) condicional -> SE . var ENTAO cmds SENAO cmds FIM

    var             shift and go to state 23


state 15

    (2) cmds -> cmds cmd .

    FACA            reduce using rule 2 (cmds -> cmds cmd .)
    MOSTRE          reduce using rule 2 (cmds -> cmds cmd .)
    SOME            reduce using rule 2 (cmds -> cmds cmd .)
    MULTIPLIQUE     reduce using rule 2 (cmds -> cmds cmd .)
    REPITA          reduce using rule 2 (cmds -> cmds cmd .)
    SE              reduce using rule 2 (cmds -> cmds cmd .)
    $end            reduce using rule 2 (cmds -> cmds cmd .)
    FIM             reduce using rule 2 (cmds -> cmds cmd .)
    SENAO           reduce using rule 2 (cmds -> cmds cmd .)


state 16

    (9) atribuicao -> FACA var . SER numero PONTO

    SER             shift and go to state 24


state 17

    (10) impressao -> MOSTRE var . PONTO

    PONTO           shift and go to state 25


state 18

    (11) impressao -> MOSTRE operacao . PONTO

    PONTO           shift and go to state 26


state 19

    (12) impressao -> MOSTRE numero . PONTO

    PONTO           shift and go to state 27


state 20

    (13) operacao -> SOME var . COM var PONTO
    (14) operacao -> SOME var . COM numero PONTO

    COM             shift and go to state 28


state 21

    (15) operacao -> MULTIPLIQUE var . POR var PONTO
    (16) operacao -> MULTIPLIQUE var . POR numero PONTO

    POR             shift and go to state 29


state 22

    (17) repeticao -> REPITA numero . VEZES COLON cmds FIM

    VEZES           shift and go to state 30


state 23

    (18) condicional -> SE var . ENTAO cmds FIM
    (19) condicional -> SE var . ENTAO cmds SENAO cmds FIM

    ENTAO           shift and go to state 31


state 24

    (9) atribuicao -> FACA var SER . numero PONTO

    numero          shift and go to state 32


state 25

    (10) impressao -> MOSTRE var PONTO .

    FACA            reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    MOSTRE          reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    SOME            reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    MULTIPLIQUE     reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    REPITA          reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    SE              reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    $end            reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    FIM             reduce using rule 10 (impressao -> MOSTRE var PONTO .)
    SENAO           reduce using rule 10 (impressao -> MOSTRE var PONTO .)


state 26

    (11) impressao -> MOSTRE operacao PONTO .

    FACA            reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    MOSTRE          reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    SOME            reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    MULTIPLIQUE     reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    REPITA          reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    SE              reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    $end            reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    FIM             reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    SENAO           reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)


state 27

    (12) impressao -> MOSTRE numero PONTO .

    FACA            reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    MOSTRE          reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    SOME            reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    MULTIPLIQUE     reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    REPITA          reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    SE              reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    $end            reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    FIM             reduce using rule 12 (impressao -> MOSTRE numero PONTO .)
    SENAO           reduce using rule 12 (impressao -> MOSTRE numero PONTO .)


state 28

    (13) operacao -> SOME var COM . var PONTO
    (14) operacao -> SOME var COM . numero PONTO

    var             shift and go to state 33
    numero          shift and go to state 34


state 29

    (15) operacao -> MULTIPLIQUE var POR . var PONTO
    (16) operacao -> MULTIPLIQUE var POR . numero PONTO

    var             shift and go to state 35
    numero          shift and go to state 36


state 30

    (17) repeticao -> REPITA numero VEZES . COLON cmds FIM

    COLON           shift and go to state 37


state 31

    (18) condicional -> SE var ENTAO . cmds FIM
    (19) condicional -> SE var ENTAO . cmds SENAO cmds FIM
    (2) cmds -> . cmds cmd
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM

    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmds                           shift and go to state 38
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    condicional                    shift and go to state 8

state 32

    (9) atribuicao -> FACA var SER numero . PONTO

    PONTO           shift and go to state 39


state 33

    (13) operacao -> SOME var COM var . PONTO

    PONTO           shift and go to state 40


state 34

    (14) operacao -> SOME var COM numero . PONTO

    PONTO           shift and go to state 41


state 35

    (15) operacao -> MULTIPLIQUE var POR var . PONTO

    PONTO           shift and go to state 42


state 36

    (16) operacao -> MULTIPLIQUE var POR numero . PONTO

    PONTO           shift and go to state 43


state 37

    (17) repeticao -> REPITA numero VEZES COLON . cmds FIM
    (2) cmds -> . cmds cmd
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM

    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmds                           shift and go to state 44
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    condicional                    shift and go to state 8

state 38

    (18) condicional -> SE var ENTAO cmds . FIM
    (19) condicional -> SE var ENTAO cmds . SENAO cmds FIM
    (2) cmds -> cmds . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM

    FIM             shift and go to state 45
    SENAO           shift and go to state 46
    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmd                            shift and go to state 15
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    condicional                    shift and go to state 8

state 39

    (9) atribuicao -> FACA var SER numero PONTO .

    FACA            reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    MOSTRE          reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    SOME            reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    MULTIPLIQUE     reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    REPITA          reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    SE              reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    $end            reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    FIM             reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)
    SENAO           reduce using rule 9 (atribuicao -> FACA var SER numero PONTO .)


state 40

    (13) operacao -> SOME var COM var PONTO .

    FACA            reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    MOSTRE          reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    SOME            reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    MULTIPLIQUE     reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    REPITA          reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    SE              reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    $end            reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    PONTO           reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    FIM             reduce using rule 13 (operacao -> SOME var COM var PONTO .)
    SENAO           reduce using rule 13 (operacao -> SOME var COM var PONTO .)


state 41

    (14) operacao -> SOME var COM numero PONTO .

    FACA            reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    MOSTRE          reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    SOME            reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    MULTIPLIQUE     reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    REPITA          reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    SE              reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    $end            reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    PONTO           reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    FIM             reduce using rule 14 (operacao -> SOME var COM numero PONTO .)
    SENAO           reduce using rule 14 (operacao -> SOME var COM numero PONTO .)


state 42

    (15) operacao -> MULTIPLIQUE var POR var PONTO .

    FACA            reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    MOSTRE          reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    SOME            reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    MULTIPLIQUE     reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    REPITA          reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    SE              reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    $end            reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    PONTO           reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    FIM             reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)
    SENAO           reduce using rule 15 (operacao -> MULTIPLIQUE var POR var PONTO .)


state 43

    (16) operacao -> MULTIPLIQUE var POR numero PONTO .

    FACA            reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    MOSTRE          reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    SOME            reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    MULTIPLIQUE     reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    REPITA          reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    SE              reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    $end            reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    PONTO           reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    FIM             reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)
    SENAO           reduce using rule 16 (operacao -> MULTIPLIQUE var POR numero PONTO .)


state 44

    (17) repeticao -> REPITA numero VEZES COLON cmds . FIM
    (2) cmds -> cmds . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM

    FIM             shift and go to state 47
    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmd                            shift and go to state 15
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    condicional                    shift and go to state 8

state 45

    (18) condicional -> SE var ENTAO cmds FIM .

    FACA            reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    MOSTRE          reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    SOME            reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    MULTIPLIQUE     reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    REPITA          reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    SE              reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    $end            reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    FIM             reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)
    SENAO           reduce using rule 18 (condicional -> SE var ENTAO cmds FIM .)


state 46

    (19) condicional -> SE var ENTAO cmds SENAO . cmds FIM
    (2) cmds -> . cmds cmd
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM

    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmds                           shift and go to state 48
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    condicional                    shift and go to state 8

state 47

    (17) repeticao -> REPITA numero VEZES COLON cmds FIM .

    FACA            reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    MOSTRE          reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    SOME            reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    MULTIPLIQUE     reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    REPITA          reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    SE              reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    $end            reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    FIM             reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)
    SENAO           reduce using rule 17 (repeticao -> REPITA numero VEZES COLON cmds FIM .)


state 48

    (19) condicional -> SE var ENTAO cmds SENAO cmds . FIM
    (2) cmds -> cmds . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . condicional
    (9) atribuicao -> . FACA var SER numero PONTO
    (10) impressao -> . MOSTRE var PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) impressao -> . MOSTRE numero PONTO
    (13) operacao -> . SOME var COM var PONTO
    (14) operacao -> . SOME var COM numero PONTO
    (15) operacao -> . MULTIPLIQUE var POR var PONTO
    (16) operacao -> . MULTIPLIQUE var POR numero PONTO
    (17) repeticao -> . REPITA numero VEZES COLON cmds FIM
    (18) condicional -> . SE var ENTAO cmds FIM
    (19) condicional -> . SE var ENTAO cmds SENAO cmds FIM
